--- a/index.html
+++ b/index.html
@@ -11,9 +11,51 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
+
+  <div class="card" data-qa="card">
+	<img src="images/imac.jpeg" class="preview">
+	
+	<div class="card-content">
+		<p class="title"> 
+			Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
+		</p>
+		<p class="description"> 
+		    Код товара: 195434
+		</p>
+		
+		<div class="stars-row">
+			<div class="stars">
+				<img src="images/star-active.svg" class="star">
+				<img src="images/star-active.svg" class="star">
+				<img src="images/star-active.svg" class="star">
+				<img src="images/star-active.svg" class="star">
+				<img src="images/star.svg" class="star last-star">
+			</div>
+			<p class="count">
+				Отзывов: 5
+			</p>
+		</div>
+		
+		<div class="price-row">
+			<p class="price-name"> 
+				Цена: 
+			</p>
+			<p class="price">
+				69 999 грн
+			</p>
+		</div>
+		
+		<a class="button" data-qa="hover" href="#">
+			Купить
+		</a>
+	</div>
+	
+  </div>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
+
