--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
 		
 		<div class="stars-row">
 			<div class="stars">
-				<img src="images/star-active.svg" class="star">
-				<img src="images/star-active.svg" class="star">
-				<img src="images/star-active.svg" class="star">
-				<img src="images/star-active.svg" class="star">
-				<img src="images/star.svg" class="star last-star">
+				<div class="star"> </div>
+				<div class="star"> </div>
+				<div class="star"> </div>
+				<div class="star"> </div>
+				<div class="star last-star"> </div>
 			</div>
-			<p class="count">
+			<div class="count">
+				Отзывов: 
+				<span>5</span>
+			</div>
+			<!--<p class="count">
 				Отзывов: 5
-			</p>
+			</p>-->
 		</div>
 		
 		<div class="price-row">
@@ -58,4 +62,3 @@
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
-
